--- a/package.json
+++ b/package.json
@@ -2,14 +2,36 @@
   "name": "venft-unlock",
   "type": "module",
   "version": "0.0.1",
+  "private": true,
+  "author": {
+    "name": "oxSaturn",
+    "email": "oxSaturn@proton.me"
+  },
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "ve:Equal": "node src/veEqual.mjs",
+    "ve:RAM": "node src/veRAM.mjs",
+    "ve:CHR": "node src/veCHR.mjs",
+    "ve:Flow": "node src/veFlow.mjs",
+    "ve:Velo": "node src/veVelo.mjs"
   },
   "dependencies": {
-    "astro": "^2.5.6"
-  }
+    "@astrojs/tailwind": "^3.1.3",
+    "astro": "^2.5.7",
+    "lightweight-charts": "^4.0.1",
+    "tailwindcss": "^3.3.2"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.59.8",
+    "@typescript-eslint/parser": "^5.59.8",
+    "eslint": "^8.42.0",
+    "eslint-plugin-astro": "^0.27.1",
+    "typescript": "^5.0.2",
+    "viem": "^0.3.50"
+  },
+  "license": "MIT"
 }
