--- a/.github/workflows/00-veEqual.yml
+++ b/.github/workflows/00-veEqual.yml
@@ -3,6 +3,7 @@ name: npm run ve:Equal
 on:
   schedule:
     - cron: "0 0 * * *" # 12:00 AM UTC
+  workflow_dispatch:
 
 jobs:
   run-script:
@@ -10,6 +11,8 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
+        with:
+          token: ${{ secrets.PAT }} # see https://github.com/peter-evans/create-pull-request/issues/48
       - name: Install dependencies
         run: npm install
       - name: Run script
